[tool.poetry]
name = "netbox-plugin-webhook-receiver"
version = "0.4.0"
description = "NetBox Webhook is a plugin for managing webhook receivers in NetBox."
authors = ["Łukasz Polański <wookasz@gmail.com>"]
homepage = "https://github.com/LuPo/netbox-plugin-webhook-receiver"
repository = "https://github.com/LuPo/netbox-plugin-webhook-receiver"
license = "MIT"
readme = "README.md"
packages = [{include = "netbox_webhook_receiver"}]
exclude = ["netbox_webhook_receiver/tests/*"]
keywords = ["netbox", "netbox-plugin", "webhook"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
